--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,3 @@
-# This file lists all individuals having contributed content to the repository.
 John Doe <johndoe@gmail.com>
+Jane Doe <janedoe@gmail.com>
+
